manifests/flexibee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flexibee
  name: flexibee
spec:
  selector:
    matchLabels:
      app: flexibee
  replicas: 1
  template:
    metadata:
      labels:
        app: flexibee
    spec:
      containers:
        - name: flexibee
          imagePullPolicy: Always
          image: registry.${DOMAIN}/flexibee:latest
          ports:
            - containerPort: 5434
---
apiVersion: v1
kind: Service
metadata:
  namespace: flexibee
  name: flexibee
spec:
  type: ClusterIP
  ports:
    - port: 5434
      targetPort: 5434
  selector:
    app: flexibee
  externalIPs:
    - ${CLUSTER_IP}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flexibee
  name: flexibee
  annotations:
    traefik.ingress.kubernetes.io/response-header-timeout: "3000s"
    traefik.ingress.kubernetes.io/timeout: "3000s"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: flexibee.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flexibee
            port:
              number: 5434
  tls:
    - secretName: flexibee-tls
      hosts:
        - flexibee.${DOMAIN}
